--- a/.gitignore
+++ b/.gitignore
@@ -334,7 +334,6 @@ paket-files/
 
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
-*.pyc
 
 # Cake - Uncomment if you are using it
 # tools/**
@@ -385,3 +384,5 @@ FodyWeavers.xsd
 /Settings.ini
 .vscode/settings.json
 /.settings
+/CMakePresets.json
+/out
